fixing some bug and layout shift problem solve, Wraping up TextUtils app

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,6 @@ code {
     monospace;
 }
 
-
+.navbar-toggler{
+  background-color:rgb(25,135,84);
+}
